avoiding some nullpointerexceptions, commenting out 52north tests.